--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>star-dusted-designs</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Eco Heroes Story Library - Learn Recycling Through Fun Stories</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <meta name="description" content="A colorful storytelling library teaching kids about recycling and waste management through fun, interactive stories. Perfect for children aged 6 and up!" />
+    <meta name="author" content="Eco Heroes" />
+    <meta name="keywords" content="recycling for kids, waste management, children stories, eco-friendly, educational stories, environment, sustainability" />
 
-    <meta property="og:title" content="star-dusted-designs" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Eco Heroes Story Library - Learn Recycling" />
+    <meta property="og:description" content="Fun recycling stories for kids! Join our Eco Heroes on adventures that teach waste management and caring for our planet." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
